fix: fix date input field styles and popup not showing

--- a/packages/frontend/src/components/FilterBar/FilterButton/filterButton.module.css
+++ b/packages/frontend/src/components/FilterBar/FilterButton/filterButton.module.css
@@ -34,6 +34,7 @@
 
 .checkMarkHolder {
   min-width: 1.5rem;
+
   svg {
     height: 1.5rem;
     width: auto;
@@ -83,31 +84,41 @@
   min-width: 300px;
   display: flex;
   flex-direction: column;
-  padding: 0.5rem;
+  padding: 0.5rem 0.5rem 1rem;
   row-gap: 1rem;
   margin-top: 0.5rem;
 }
 
+.dateInputLabel {
+  pointer-events: none;
+}
+
 .dateInputWrapper {
   display: flex;
+  justify-content: space-between;
   appearance: none;
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.5);
+  position: relative;
+}
+
+.dateInputWrapper:focus-within {
+  border: 1px solid var(--Action-Link);
 }
 
 .dateInputField {
   -webkit-appearance: none;
   -moz-appearance: textfield;
-  width: calc(100% - 1rem);
+  width: calc(100% - 2rem);
   appearance: none;
   padding: 8px;
   border: none;
+  outline: none;
 }
 
 .dateInputField::-webkit-inner-spin-button,
 .dateInputField::-webkit-calendar-picker-indicator {
-  display: none;
-  -webkit-appearance: none;
+  cursor: pointer;
 }
 
 .clearDateButton {
@@ -119,8 +130,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0;
   align-self: center;
+  padding-right: 16px;
 }
 
 .clearDateIcon {
@@ -131,7 +142,6 @@
   min-height: 16px;
   border-radius: 24px;
   background-color: var(--black-5, rgba(0, 0, 0, 0.05));
-  margin-right: 1rem;
   color: #000;
   padding: 2px;
 }
